# Django_task

./: dogs.j  dogs.json  pyproject.toml  requirements.txt
config/: settings.py  urls.py
dogs/: admin.py  forms.py  models.py  urls.py  views.py
dogs/management/commands/: dump_custom.py
dogs/migrations/: 0001_initial.py  0002_alter_breed_options_dog_view_counter.py  0003_parent.py  0004_parent_year_born_temp_alter_breed_description.py  0005_remove_parent_year_born.py  0006_rename_year_born_temp_parent_year_born.py  0007_dog_owner.py  0008_test.py  0009_alter_parent_options_alter_test_options_and_more.py  0010_alter_dog_options.py
dogs/templates/: base.html  dogs_detail.html  dogs_list.html
dogs/templates/dogs/: base.html  dog_confirm_delete.html  dog_detail.html  dog_form.html  dog_list.html
dogs/templates/dogs/includes/: inc_menu.html
dogs/templates/includes/: inc_menu.html
users/: forms.py  models.py  urls.py  views.py
users/management/commands/: csu.py
users/migrations/: 0001_initial.py  0002_user_token.py
users/templates/: login.html
users/templates/users/: user_form.html
